cmake_minimum_required(VERSION 3.5)
project(HttpServerRestPrototype)
set(CMAKE_CXX_STANDARD 14)
find_package(cpprestsdk REQUIRED)
find_package(Boost REQUIRED)
find_package(OpenSSL REQUIRED)
file(GLOB SOURCES "*cpp")
add_executable(httpServerProto ${SOURCES})
target_link_libraries(httpServerProto PRIVATE cpprest ssl crypto pthread)
